updated some information and removed unneeded html pages

--- a/history.html
+++ b/history.html
@@ -58,8 +58,8 @@
             <div class="art-header">
               <!-- avatar -->
               <div class="art-avatar">
-                <a data-fancybox="avatar" href="img/face-1.jpg" class="art-avatar-curtain">
-                  <img src="img/face-1.jpg" alt="avatar">
+                <a data-fancybox="avatar" href="img/face-1.jpeg" class="art-avatar-curtain">
+                  <img src="img/face-1.jpeg" alt="avatar">
                   <i class="fas fa-expand"></i>
                 </a>
                 <!-- available -->
@@ -70,9 +70,9 @@
               </div>
               <!-- avatar end -->
               <!-- name -->
-              <h5 class="art-name mb-10"><a href="/home.html">Artur Carter</a></h5>
+              <h5 class="art-name mb-10"><a href="/home.html">Franklin Le</a></h5>
               <!-- post -->
-              <div class="art-sm-text">Front-end Deweloper <br>Ui/UX Designer, </div>
+              <div class="art-sm-text">UCSD Student<br>Software Developer</div>
             </div>
             <!-- info bar header end -->
 
@@ -318,11 +318,12 @@
                         <div class="art-a art-timeline-content">
                           <div class="art-card-header">
                             <div class="art-left-side">
-                              <h5>University of toronto</h5>
-                              <div class="art-el-suptitle mb-15">Student</div>
+                              <h5>University of California, San Diego</h5>
+                              <div class="art-el-suptitle mb-15">B.S. Cognitive Science w/ Specialization in Machine Learning</div>
+                    
                             </div>
                             <div class="art-right-side">
-                              <span class="art-date">jan 2018 - may 2020</span>
+                              <span class="art-date">2020 - Present</span>
                             </div>
                           </div>
 
@@ -338,11 +339,11 @@
                         <div class="art-a art-timeline-content">
                           <div class="art-card-header">
                             <div class="art-left-side">
-                              <h5>Arter design school</h5>
-                              <div class="art-el-suptitle mb-15">Student</div>
+                              <h5>Cypress College</h5>
+                              <div class="art-el-suptitle mb-15">Associate's Degree</div>
                             </div>
                             <div class="art-right-side">
-                              <span class="art-date">jan 2018 - may 2020</span>
+                              <span class="art-date">2018 - 2020</span>
                             </div>
                           </div>
                           <div>Consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</div>
@@ -767,15 +768,6 @@
               </nav>
               <!-- menu end -->
 
-              <!-- language change -->
-              <ul class="art-language-change">
-                <!-- language item -->
-                <li><a href="#.">FR</a></li>
-                <!-- language item -->
-                <li class="art-active-lang"><a href="#.">EN</a></li>
-              </ul>
-              <!-- language change end -->
-
             </div>
             <!-- scroll frame end -->
 
@@ -796,7 +788,7 @@
       <!-- preloader content -->
       <div class="art-preloader-content">
         <!-- title -->
-        <h4>Artur Carter</h4>
+        <h4>Franklin Le</h4>
         <!-- progressbar -->
         <div id="preloader" class="art-preloader-load"></div>
       </div>
