fixed index.html pathing

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <!-- avatar end -->
                 <!-- name -->
                 <h5 class="art-name mb-10">
-                  <a href="/home.html">Franklin Le</a>
+                  <a href="/index.html">Franklin Le</a>
                 </h5>
                 <!-- post -->
                 <div class="art-sm-text">
@@ -1064,7 +1064,7 @@
                   <ul class="main-menu">
                     <!-- menu item -->
                     <li class="menu-item current-menu-item">
-                      <a href="/home.html">Home</a>
+                      <a href="/index.html">Home</a>
                     </li>
                     <!-- menu item -->
                     <li class="menu-item">
