--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
               </div>
               <!-- avatar end -->
               <!-- name -->
-              <h5 class="art-name mb-10"><a href="/home.html">Artur Carter</a></h5>
+              <h5 class="art-name mb-10"><a href="/index.html">Artur Carter</a></h5>
               <!-- post -->
               <div class="art-sm-text">Front-end Deweloper <br>Ui/UX Designer, </div>
             </div>
