changed UI colors and need to design project information page

--- a/index.html
+++ b/index.html
@@ -366,13 +366,13 @@
                         <!-- service content -->
                         <div class="art-service-ib-content">
                           <!-- title -->
-                          <h5 class="mb-15">Fitness Application</h5>
+                          <h5 class="mb-15">turtlGainz: Mobile Fitness App</h5>
                           <!-- text -->
                           <div class="mb-15">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Delectus esse commodi deserunt vitae, vero
-                            quasi! Veniam quaerat tenetur pariatur doloribus.
+                            A mobile application which provides users a platform to track gym progress, build workout routines, and access a massive database of exercises for all main muscle groups. turtlGainz will help reach your fitness goals.
                           </div>
+
+
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
