fixed Github/Linked button alignment

--- a/index.html
+++ b/index.html
@@ -89,19 +89,21 @@
                   <!-- about text -->
                   <ul>
                     <!-- country -->
-
-                    <h6>Residence:</h6>
-                    <span>United States</span>
-
+                    <li>
+                      <h6>Residence:</h6>
+                      <span>United States</span>
+                    </li>
                     <!-- city -->
-
-                    <h6>City:</h6>
-                    <span>Garden Grove, CA</span>
+                    <li>
+                      <h6>City:</h6>
+                      <span>Garden Grove, CA</span>
+                    </li>
 
                     <!-- age -->
-
-                    <h6>Age:</h6>
-                    <span>21</span>
+                    <li>
+                      <h6>Age:</h6>
+                      <span>21</span>
+                    </li>
                   </ul>
                 </div>
                 <!-- info bar about end -->
@@ -248,16 +250,16 @@
                             <!-- button -->
 
                             <div class="art-buttons-frame">
-                              <a
+                              <b
                                 href="https://github.com/franklinle?tab=repositories"
                                 class="art-btn1 art-btn-md"
                               >
-                                <span>GitHub</span></a
+                                <span>GitHub</span></b
                               >
-                              <a
+                              <c
                                 href="https://www.linkedin.com/in/franklinle/"
                                 class="art-btn art-btn-md"
-                                ><span>LinkedIn</span></a
+                                ><span>LinkedIn</span></c
                               >
                             </div>
                           </div>
