fixed spacing between buttons confirmed

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                           <!-- main title -->
                           <div class="art-banner-title">
                             <!-- title -->
-                            <h1 class="mb-15">Hi, I'm Franklin!</h1>
+                            <h1 class="mb-15">My Portfolio</h1>
 
                             <!-- suptitle -->
                             <div class="art-lg-text art-code mb-25">
@@ -243,23 +243,32 @@
                               <span
                                 class="txt-rotate"
                                 data-period="2000"
-                                data-rotate='[ "django applications.", "ios and android applications.", "wireframes for projects.", "automation tools." ]'
+                                data-rotate='[ "django applications.", "ios and android applications.", "project wireframes.", "automation tools." ]'
                               ></span
                               >&lt;/<i>code</i>&gt;
                             </div>
                             <!-- button -->
 
-                            <div class="art-buttons-frame">
-                              <b
-                                href="https://github.com/franklinle?tab=repositories"
-                                class="art-btn1 art-btn-md"
+                            <div class="new-art-buttons-frame">
+                              <a
+                                href="https://github.com/franklinle"
+                                class="art-btn1 art-btn1-md"
                               >
-                                <span>GitHub</span></b
+                                <span>GitHub</span></a
                               >
-                              <c
+
+                              <!-- space between buttons -->
+
+                              <a class="art-btn2 art-btn-md" ><span></span> </a>
+                              <a class="art-btn2 art-btn-md" ><span></span> </a>
+                              <a class="art-btn2 art-btn-md" ><span></span> </a>
+                              <a class="art-btn2 art-btn-md" ><span></span> </a>
+                              <a class="art-btn2 art-btn-md" ><span></span> </a>
+
+                              <a
                                 href="https://www.linkedin.com/in/franklinle/"
                                 class="art-btn art-btn-md"
-                                ><span>LinkedIn</span></c
+                                ><span>LinkedIn</span></a
                               >
                             </div>
                           </div>
