--- a/onepage.html
+++ b/onepage.html
@@ -313,7 +313,7 @@
                               data-rotate='[ "web interfaces.", "ios and android applications.", "design mocups.", "automation tools." ]'></span>&lt;/<i>code</i>&gt;</div>
                           <div class="art-buttons-frame">
                             <!-- button -->
-                            <a href="#." class="art-btn art-btn-md"><span>Explore now</span></a>
+                            <a href="https://github.com/franklinle" class="art-btn art-btn-md"><span>Explore now</span></a>
                             <!-- button -->
                             <a href="#." class="art-link art-white-link art-w-chevron">Hire me</a>
                           </div>
