--- a/index.html
+++ b/index.html
@@ -639,14 +639,14 @@
                         <li>
                           <span
                             class="iconify"
-                            data-icon="vscode-icons:file-type-sqlite"
+                            data-icon="logos:figma"
                             data-inline="false"
                             data-width="70px
                             "
                             data-height="70px
                             "
                           ></span
-                          ><span>SQLite</span>
+                          ><span>Figma</span>
                         </li>
                         <li>
                           <span
