--- a/contact.html
+++ b/contact.html
@@ -422,7 +422,7 @@
                         <!-- form field end -->
                         <!-- button -->
                         <div class="art-submit-frame">
-                          <button class="art-btn art-btn-md art-submit" type="submit"><span>Send message</span></button>
+                          <button class="art-btn2 art-btn2-md art-submit" type="submit"><span>Send message</span></button>
                           <!-- success -->
                           <div class="art-success">Success <i class="fas fa-check"></i></div>
                         </div>
