--- a/index.html
+++ b/index.html
@@ -184,9 +184,50 @@
                   <!-- download cv button -->
                   <a href="files/cv.txt" class="art-link" download
                     >Resume.PDF 
-                    <!-- <i class="fas fa-download"></i> -->
+                    <i class="fas fa-download"></i>
                   </a>
                 </div>
+
+                   <!-- divider -->
+                   <div class="art-ls-divider1"></div>
+
+                <!-- contact form -->
+                <form id="form" class="art-contact-form">
+                  <!-- form field -->
+                  <div class="art-form-field">
+                    <!-- name input -->
+                    <input id="name" name="name" class="art-input" type="text" placeholder="Name" required>
+                    <!-- label -->
+                    <label for="name"><i class="fas fa-user"></i></label>
+                  </div>
+                  <!-- form field end -->
+                  <!-- form field -->
+                  <div class="art-form-field">
+                    <!-- email input -->
+                    <input id="email" name="email" class="art-input" type="email" placeholder="Email" required>
+                    <!-- label -->
+                    <label for="email"><i class="fas fa-at"></i></label>
+                  </div>
+                  <!-- form field end -->
+                  <!-- form field -->
+                  <div class="art-form-field">
+                    <!-- message textarea -->
+                    <textarea id="message" name="text" class="art-input" placeholder="What can I do for you?" required></textarea>
+                    <!-- label -->
+                    <label for="message"><i class="far fa-envelope"></i></label>
+                  </div>
+                  <!-- form field end -->
+                  <!-- button -->
+                  <div class="art-submit-frame">
+                    <a>
+                      <button class="art-btn2 art-btn2-md art-submit" type="submit"><span>Send</span></button>
+                      <!-- success -->
+                      <div class="art-success">Success <i class="fas fa-check"></i></div>
+                    </a>
+                    
+                  </div>
+                </form>
+                <!-- contact form end -->
 
                 <!-- links frame end -->
               </div>
