--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 </h5>
                 <!-- post -->
                 <div class="art-sm-text">
-                  UCSD Student<br />Software Developer
+                  UCSD Student<br />
+                  <!-- Software Developer -->
                 </div>
               </div>
               <!-- info bar header end -->
@@ -212,7 +213,7 @@
                   <!-- form field -->
                   <div class="art-form-field">
                     <!-- message textarea -->
-                    <textarea id="message" name="text" class="art-input" placeholder="What can I do for you?" required></textarea>
+                    <textarea id="message" name="text" class="art-input" placeholder="Message" required></textarea>
                     <!-- label -->
                     <label for="message"><i class="far fa-envelope"></i></label>
                   </div>
@@ -797,7 +798,7 @@
                           </div>
                         </div>
 
-                        <div class="art-timeline-item">
+                        <!-- <div class="art-timeline-item">
                           <div class="art-timeline-mark-light"></div>
                           <div class="art-timeline-mark"></div>
 
@@ -812,11 +813,14 @@
                               <div class="art-right-side">
                                 <span class="art-date">2014 - 2018</span>
                               </div>
-                            </div>
+                            </div> -->
 
                             <!-- <a data-fancybox="diplome" href="files/certificate.jpg" class="art-link art-color-link art-w-chevron">Certificate</a> -->
-                          </div>
-                        </div>
+                          <!-- </div>
+                        </div> -->
+
+
+
                       </div>
                       <!-- timeline end -->
                     </div>
