changed the loading progress bar

--- a/index.html
+++ b/index.html
@@ -847,14 +847,14 @@
                               <div class="art-left-side">
                                 <h5>San Diego Supercomputer Center</h5>
                                 <div class="art-el-subtitle mb-15">
-                                  Software Development Intern
+                                  San Diego, CA
                                 </div>
                               </div>
                               <div class="art-right-side">
                                 <span class="art-date">2021</span>
                               </div>
                             </div>
-                            <!-- <p>Placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p> -->
+                            <p>Software Development Internship</p>
                           </div>
                         </div>
                       </div>
@@ -949,7 +949,7 @@
         <!-- preloader content -->
         <div class="art-preloader-content">
           <!-- title -->
-          <h4>Franklin Le</h4>
+          <h4>Loading</h4>
           <!-- progressbar -->
           <div id="preloader" class="art-preloader-load"></div>
         </div>
