in progress commit

--- a/index.html
+++ b/index.html
@@ -192,43 +192,6 @@
                    <!-- divider -->
                    <div class="art-ls-divider1"></div>
 
-                <!-- contact form -->
-                <form id="form" class="art-contact-form">
-                  <!-- form field -->
-                  <div class="art-form-field">
-                    <!-- name input -->
-                    <input id="name" name="name" class="art-input" type="text" placeholder="Name" required>
-                    <!-- label -->
-                    <label for="name"><i class="fas fa-user"></i></label>
-                  </div>
-                  <!-- form field end -->
-                  <!-- form field -->
-                  <div class="art-form-field">
-                    <!-- email input -->
-                    <input id="email" name="email" class="art-input" type="email" placeholder="Email" required>
-                    <!-- label -->
-                    <label for="email"><i class="fas fa-at"></i></label>
-                  </div>
-                  <!-- form field end -->
-                  <!-- form field -->
-                  <div class="art-form-field">
-                    <!-- message textarea -->
-                    <textarea id="message" name="text" class="art-input" placeholder="Message" required></textarea>
-                    <!-- label -->
-                    <label for="message"><i class="far fa-envelope"></i></label>
-                  </div>
-                  <!-- form field end -->
-                  <!-- button -->
-                  <div class="art-submit-frame">
-                    <a>
-                      <button class="art-btn2 art-btn2-md art-submit" type="submit"><span>Send</span></button>
-                      <!-- success -->
-                      <div class="art-success">Success <i class="fas fa-check"></i></div>
-                    </a>
-                    
-                  </div>
-                </form>
-                <!-- contact form end -->
 
                 <!-- links frame end -->
               </div>
@@ -392,35 +355,6 @@
                         <!-- service content -->
                         <div class="art-service-ib-content">
                           <!-- title -->
-                          <h5 class="mb-15">News Application</h5>
-                          <!-- text -->
-                          <div class="mb-15">
-                            A web application which provides users a feed of the
-                            latest world news. News data is fetched from News
-                            API and displayed in a scroll view manner.
-                          </div>
-                          <!-- button -->
-                          <div class="art-buttons-frame">
-                            <a
-                              href="/contact.html"
-                              class="art-link art-color-link art-w-chevron"
-                              >More</a
-                            >
-                          </div>
-                        </div>
-                        <!-- service content end -->
-                      </div>
-                      <!-- service end -->
-                    </div>
-                    <!-- col end -->
-
-                    <!-- col -->
-                    <div class="col-lg-4 col-md-6">
-                      <!-- service -->
-                      <div class="art-a art-service-icon-box">
-                        <!-- service content -->
-                        <div class="art-service-ib-content">
-                          <!-- title -->
                           <h5 class="mb-15">Network Web Application</h5>
                           <!-- text -->
                           <div class="mb-15">
@@ -450,9 +384,38 @@
                         <!-- service content -->
                         <div class="art-service-ib-content">
                           <!-- title -->
+                          <h5 class="mb-15">News Application</h5>
+                          <!-- text -->
+                          <div class="mb-15">
+                            A web application which provides users a feed of the
+                            latest world news. News data is fetched from News
+                            API and displayed in a scroll view manner.
+                          </div>
+                          <!-- button -->
+                          <div class="art-buttons-frame">
+                            <a
+                              href="/contact.html"
+                              class="art-link art-color-link art-w-chevron"
+                              >More</a
+                            >
+                          </div>
+                        </div>
+                        <!-- service content end -->
+                      </div>
+                      <!-- service end -->
+                    </div>
+                    <!-- col end -->
+
+                    <!-- col -->
+                    <div class="col-lg-4 col-md-6">
+                      <!-- service -->
+                      <div class="art-a art-service-icon-box">
+                        <!-- service content -->
+                        <div class="art-service-ib-content">
+                          <!-- title -->
                           <h5 class="mb-15">Budget Manager Application</h5>
                           <!-- text -->
-                          <div class="mb-15">Do later</div>
+                          <div class="mb-15">In Progress</div>
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
@@ -477,7 +440,7 @@
                           <!-- title -->
                           <h5 class="mb-15">To Do Application</h5>
                           <!-- text -->
-                          <div class="mb-15">Do later</div>
+                          <div class="mb-15">In Progress</div>
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
@@ -502,7 +465,7 @@
                           <!-- title -->
                           <h5 class="mb-15">Weather Application</h5>
                           <!-- text -->
-                          <div class="mb-15">Do later</div>
+                          <div class="mb-15">In Progress</div>
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
