--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </h5>
                 <!-- post -->
                 <div class="art-sm-text">
-                  UCSD Student<br />
+                  UCSD Student+<br />
                   <!-- Software Developer -->
                 </div>
               </div>
@@ -113,8 +113,7 @@
                 <div class="art-ls-divider1"></div>
 
                 <!-- hard skills -->
-                <div class="art-hard-skills p-70px
-                -15">
+                <div class="art-hard-skills p-70px -15">
                   <!-- skill -->
                   <div class="art-hard-skills-item">
                     <div class="art-skill-heading">
@@ -184,14 +183,13 @@
                 <div class="art-links-frame p-15-15">
                   <!-- download cv button -->
                   <a href="files/cv.txt" class="art-link" download
-                    >Resume.PDF 
+                    >Resume.PDF
                     <i class="fas fa-download"></i>
                   </a>
                 </div>
 
-                   <!-- divider -->
-                   <div class="art-ls-divider1"></div>
-
+                <!-- divider -->
+                <div class="art-ls-divider1"></div>
 
                 <!-- links frame end -->
               </div>
@@ -225,8 +223,7 @@
                 <!-- container -->
                 <div class="container-fluid">
                   <!-- row -->
-                  <div class="row p-60-0 p-lg-70px
-                  -0 p-md-15-0">
+                  <div class="row p-60-0 p-lg-70px -0 p-md-15-0">
                     <!-- col -->
                     <div class="col-lg-12">
                       <!-- banner -->
@@ -778,12 +775,9 @@
                               </div>
                             </div> -->
 
-                            <!-- <a data-fancybox="diplome" href="files/certificate.jpg" class="art-link art-color-link art-w-chevron">Certificate</a> -->
-                          <!-- </div>
+                        <!-- <a data-fancybox="diplome" href="files/certificate.jpg" class="art-link art-color-link art-w-chevron">Certificate</a> -->
+                        <!-- </div>
                         </div> -->
-
-
-
                       </div>
                       <!-- timeline end -->
                     </div>
