--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </h5>
                 <!-- post -->
                 <div class="art-sm-text">
-                  UCSD Student+<br />
+                  UCSD Student<br />
                   <!-- Software Developer -->
                 </div>
               </div>
