--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <!-- title frame -->
                         <div class="art-title-frame">
                           <!-- title -->
-                          <h4>My Projects</h4>
+                          <h4>Projects</h4>
                         </div>
                         <!-- title frame end -->
                       </div>
@@ -493,7 +493,7 @@
                         <!-- title frame -->
 
                         <!-- title -->
-                        <h4>My Skills</h4>
+                        <h4>Skills</h4>
 
                         <!-- title frame end -->
                       </div>
