--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <!-- links frame -->
                 <div class="art-links-frame p-15-15">
                   <!-- download cv button -->
-                  <a href="files/cv.txt" class="art-link" download
+                  <a href="files/Resume.docx.pdf" class="art-link" download
                     >Resume.PDF
                     <i class="fas fa-download"></i>
                   </a>
