project templates complete

--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
                 <!-- links frame end -->
               </div>
               <!-- scroll frame end -->
-
             </div>
             <!-- menu bar frame end -->
           </div>
@@ -249,7 +248,7 @@
                               ></span
                               >&lt;/<i>code</i>&gt;
                             </div>
-                            <!-- button -->
+                            <!-- github button -->
 
                             <div class="new-art-buttons-frame">
                               <a
@@ -258,6 +257,7 @@
                               >
                                 <span>GitHub</span></a
                               >
+                              <!-- github button end -->
 
                               <!-- space between buttons -->
 
@@ -330,7 +330,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/contact.html"
+                              href="/project1.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
@@ -359,7 +359,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/contact.html"
+                              href="/project2.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
@@ -388,7 +388,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/contact.html"
+                              href="/project3.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
@@ -413,7 +413,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/contact.html"
+                              href="/project4.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
@@ -438,7 +438,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/contact.html"
+                              href="/project5.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
@@ -463,7 +463,7 @@
                           <!-- button -->
                           <div class="art-buttons-frame">
                             <a
-                              href="/contact.html"
+                              href="/project6.html"
                               class="art-link art-color-link art-w-chevron"
                               >More</a
                             >
