--- a/project1.html
+++ b/project1.html
@@ -22,6 +22,9 @@
     <!-- main css -->
     <link rel="stylesheet" href="css/style.css" />
 
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+
     <title>Project Template</title>
   </head>
 
@@ -290,29 +293,6 @@
                           unde, quibusdam accusamus culpa cumque delectus
                           deserunt nemo saepe minima.
                         </p>
-                        <ul class="art-custom-list">
-                          <li>Doloribus recusandae</li>
-                          <li>Alias officia ad nihil</li>
-                          <li>Culpa repellat</li>
-                          <li>Officiis deleniti</li>
-                        </ul>
-                        <p>
-                          Doloribus recusandae vel odio laboriosam, officia,
-                          neque ad. Eius porro, quas adipisci mollitia similique
-                          possimus ex odio eum harum eos ut optio architecto
-                          eveniet corporis nostrum beatae impedit, iste officia
-                          tempora sapiente aut, distinctio numquam inventore et!
-                          Ducimus quasi ullam saepe aliquid aut minus molestiae
-                          nam. Dolor consequuntur cum consectetur ducimus
-                          obcaecati perspiciatis harum quae atque, architecto
-                          aut voluptatibus quaerat nisi, nobis asperiores.
-                        </p>
-
-                        <blockquote>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Nemo officiis aliquam, placeat quis voluptatum
-                          ad. Eum, alias quo fuga sed?
-                        </blockquote>
                       </div>
                       <!-- post text end -->
                     </div>
@@ -320,26 +300,38 @@
 
                     <!-- col -->
                     <div class="col-lg-4">
-                      <div class="art-a art-card">
-                        <!-- table -->
-                        <div class="art-table p-15-15">
-                          <ul>
-                            <li>
-                              <h6>Date:</h6>
-                              <span>24.12.2019</span>
-                            </li>
-                            <li>
-                              <h6>Author:</h6>
-                              <span>Artur Carter</span>
-                            </li>
-                            <li>
-                              <h6>Category:</h6>
-                              <span>Product design</span>
-                            </li>
-                          </ul>
-                        </div>
-                        <!-- table end -->
-                      </div>
+                      
+                      <p class="art-lg-text art-white">
+                        <i
+                          >Made with:</i
+                        >
+                      </p>
+                      <div style="text-align: center;">
+                      <a href="https://google.com">
+                      <span class="iconify-inline" data-icon="vscode-icons:file-type-python" data-width="60" data-height="60"></span>
+                    </a>
+                    <a href="https://google.com">
+                      <span class="iconify-inline" data-icon="vscode-icons:file-type-python" data-width="60" data-height="60"></span>
+                    </a>
+                    </div>
+                    <!-- github button end -->
+                    <div class="new-art-buttons-frame2">
+                      <a
+                        href="https://github.com/franklinle"
+                        class="art-btn1 art-btn1-md"
+                      >
+                        <span>Demo</span></a
+                      >
+                      <!-- github button end -->
+                        <!-- github button end -->
+                          <div class="new-art-buttons-frame1">
+                            <a
+                              href="https://github.com/franklinle"
+                              class="art-btn1 art-btn1-md"
+                            >
+                              <span>Code</span></a
+                            >
+                            <!-- github button end -->
                     </div>
                     <!-- col end -->
                   </div>
@@ -379,92 +371,33 @@
                   <!-- menu list -->
                   <ul class="main-menu">
                     <!-- menu item -->
-                    <li class="menu-item"><a href="/home.html">Home</a></li>
-                    <!-- menu item -->
-                    <li class="menu-item menu-item-has-children">
-                      <a href="#.">Portfolio</a>
-                      <!-- sub menu -->
-                      <ul class="sub-menu">
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/portfolio-2-col.html">2 column</a>
-                        </li>
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/portfolio-3-col.html">3 column</a>
-                        </li>
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/portfolio-2-col-masonry.html"
-                            >2 column masonry</a
-                          >
-                        </li>
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/portfolio-3-col-masonry.html"
-                            >3 column masonry</a
-                          >
-                        </li>
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/portfolio-single.html">Single project</a>
-                        </li>
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/portfolio-single-2.html"
-                            >Single project 2</a
-                          >
-                        </li>
-                      </ul>
-                      <!-- sub menu end -->
+                    <li class="menu-item current-menu-item">
+                      <a href="/index.html">Home</a>
+
+                      <!-- menu item -->
                     </li>
-                    <!-- menu item -->
+
                     <li class="menu-item">
                       <a href="/history.html">History</a>
+
+                      <!-- menu item -->
                     </li>
-                    <!-- menu item -->
+
                     <li class="menu-item">
                       <a href="/contact.html">Contact</a>
-                    </li>
-                    <!-- menu item -->
-                    <li
-                      class="menu-item menu-item-has-children current-menu-item"
-                    >
-                      <a href="#.">Blog</a>
-                      <!-- sub menu -->
-                      <ul class="sub-menu">
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/blog-2-col.html">2 column</a>
-                        </li>
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/blog-3-col.html">3 column</a>
-                        </li>
-                        <!-- lvl 2 nav link -->
-                        <li class="menu-item">
-                          <a href="/blog-post.html">Publication</a>
-                        </li>
-                      </ul>
-                      <!-- sub menu end -->
-                    </li>
-                    <!-- menu item -->
-                    <li class="menu-item">
-                      <a href="onepage.html" target="_blank">Onepage</a>
+
+                      <!-- menu item -->
+
+                      <!-- menu item -->
+                      <!-- <li class="menu-item">
+                      <a href="onepage.html" target="_blank">One Page</a>
+                     -->
                     </li>
                   </ul>
+
                   <!-- menu list end -->
                 </nav>
                 <!-- menu end -->
-
-                <!-- language change -->
-                <ul class="art-language-change">
-                  <!-- language item -->
-                  <li><a href="#.">FR</a></li>
-                  <!-- language item -->
-                  <li class="art-active-lang"><a href="#.">EN</a></li>
-                </ul>
-                <!-- language change end -->
               </div>
               <!-- scroll frame end -->
             </div>
