--- a/project4.html
+++ b/project4.html
@@ -22,6 +22,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="css/style.css" />
 
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 
     <title>Project Template</title>
@@ -270,15 +271,27 @@
                       <!-- post text -->
                       <div class="art-a art-card">
                         <p class="art-lg-text art-white">
-                          <i> Mobile application which tracks fitness progress based on user activity. Users can see overall progress (weight, sets, reps) of different exercises based on their everyday workouts and routines. Users can also create their own account to set objectives, create custom workout plans, and access a massive exercise database to help reach their fitness goals.
-
-
-                            </i
+                          <i
+                            >Consectetur adipisicing elit. Magni debitis nemo,
+                            minus aut tempora impedit quis quam omnis, odit
+                            saepe ipsa sunt magnam culpa quisquam iusto
+                            consectetur necessitatibus. Tenetur, eligendi!</i
                           >
                         </p>
 
                         <p>
-                          BRUH
+                          Vero praesentium voluptatibus repellendus, delectus
+                          harum. Necessitatibus temporibus, veritatis sapiente
+                          laudantium eius rem dolore voluptas porro assumenda
+                          quam ea earum ad dolor dolores ut ipsam optio! Numquam
+                          dolore quidem sequi eum placeat voluptatum, assumenda
+                          et culpa iure nemo vero animi mollitia facere fuga sit
+                          debitis doloremque quo tempore nesciunt voluptates
+                          cum. Est, labore pariatur cupiditate non alias officia
+                          ad nihil animi itaque soluta quo perferendis vero
+                          libero ex. Iste ipsam eaque veniam facilis architecto
+                          unde, quibusdam accusamus culpa cumque delectus
+                          deserunt nemo saepe minima.
                         </p>
                       </div>
                       <!-- post text end -->
@@ -288,7 +301,7 @@
                     <!-- col -->
                     <div class="col-lg-4">
                       
-                      <p class="art-lg-text1 art-white">
+                      <p class="art-lg-text art-white">
                         <i
                           >Made with:</i
                         >
