--- a/project1.html
+++ b/project1.html
@@ -270,15 +270,17 @@
                       <!-- post text -->
                       <div class="art-a art-card">
                         <p class="art-lg-text art-white">
-                          <i> Mobile application which tracks fitness progress based on user activity. Users can see overall progress (weight, sets, reps) of different exercises based on their everyday workouts and routines. Users can also create their own account to set objectives, create custom workout plans, and access a massive exercise database to help reach their fitness goals.
-
-
-                            </i
-                          >
-                        </p>
-
-                        <p>
-                          BRUH
+                          <i> Mobile application which tracks fitness progress based on user activity.
+                             Users can see overall progress (weight, sets, reps) of different exercises
+                              based on their everyday workouts and routines. Users can also create their
+                               own account to set objectives, create custom workout plans, and access a
+                                massive exercise database to help reach their fitness goals.</i>
+                          <ul class="art-custom-list">
+                            <li>React frontend and Node.js backend</li>
+                            <li>iOS application using Expo as GUI</li>
+                            <li>Uses Firebase as a database</li>
+                            <li>Officiis deleniti</li>
+                          </ul>
                         </p>
                       </div>
                       <!-- post text end -->
@@ -287,11 +289,11 @@
 
                     <!-- col -->
                     <div class="col-lg-4">
-                      
+                      <p>
+                        &nbsp;
+                      </p>
                       <p class="art-lg-text1 art-white">
-                        <i
-                          >Made with:</i
-                        >
+                        Made with: 
                       </p>
                       <div style="text-align: center;">
                       <a href="https://google.com">
@@ -302,6 +304,7 @@
                     </a>
                     </div>
                     <!-- github button end -->
+                  
                     <div class="new-art-buttons-frame2">
                       <a
                         href="https://github.com/franklinle"
@@ -309,16 +312,8 @@
                       >
                         <span>Demo</span></a
                       >
+                      </div>
                       <!-- github button end -->
-                        <!-- github button end -->
-                          <div class="new-art-buttons-frame1">
-                            <a
-                              href="https://github.com/franklinle"
-                              class="art-btn1 art-btn1-md"
-                            >
-                              <span>Code</span></a
-                            >
-                            <!-- github button end -->
                     </div>
                     <!-- col end -->
                   </div>
