--- a/project6.html
+++ b/project6.html
@@ -74,7 +74,7 @@
                 <!-- avatar end -->
                 <!-- name -->
                 <h5 class="art-name mb-10">
-                  <a href="/index.html">Franklin Le</a>
+                  <a href="/home.html">Franklin Le</a>
                 </h5>
                 <!-- post -->
                 <div class="art-sm-text">
@@ -372,7 +372,7 @@
                   <ul class="main-menu">
                     <!-- menu item -->
                     <li class="menu-item current-menu-item">
-                      <a href="/index.html">Home</a>
+                      <a href="/home.html">Home</a>
 
                       <!-- menu item -->
                     </li>
