only need gifs for project 1

--- a/project1 copy.html
+++ b/project1 copy.html
@@ -293,12 +293,12 @@
                       <p class="art-lg-text1 art-white">
                         Made with: 
                       </p>
-                      
-                      <div class="div1">
-                        <img
-                          class="animated-gif"
-                          src="img/p1.png"
-                        />
+                      &nbsp;
+                      <div style="text-align: center;">
+                        <span class="iconify-inline" data-icon="logos:react" data-width="60" data-height="60"></span>
+                        <span class="iconify-inline" data-icon="logos:nodejs-icon" data-width="60" data-height="60"></span>
+                        <span class="iconify-inline" data-icon="vscode-icons:file-type-light-expo" data-width="60" data-height="60"></span>
+                        <span class="iconify-inline" data-icon="logos:firebase" data-width="60" data-height="60"></span>                    
                       </div>
                     <!-- github button end -->
                     &nbsp;
