fixed github/linkedin buttons

--- a/project1.html
+++ b/project1.html
@@ -269,7 +269,7 @@
                     <div class="col-lg-8">
                       <!-- post text -->
                       <div class="art-a art-card">
-                        <p class="art-lg-text art-white">
+                        <p class="art-lg-text2 art-white">
                           <i> Mobile application which tracks fitness progress based on user activity.
                              Users can see overall progress (weight, sets, reps) of different exercises
                               based on their everyday workouts and routines. Users can also create their
@@ -305,10 +305,10 @@
                   
                     <div class="new-art-buttons-frame2">
                       <a
-                        href="https://github.com/franklinle"
+                        href="https://github.com/franklinle/turtlGainz"
                         class="art-btn1 art-btn1-md"
                       >
-                        <span>Code</span></a
+                        <span>View Code</span></a
                       >
                       </div>
                       <!-- github button end -->
