finished turtlgainz gifs, need to resize

--- a/home.html
+++ b/home.html
@@ -58,10 +58,10 @@
                 <div class="art-avatar">
                   <a
                     data-fancybox="avatar"
-                    href="img/face-1.jpeg"
+                    href="media/profile/profile_pic.jpeg"
                     class="art-avatar-curtain"
                   >
-                    <img src="img/face-1.jpeg" alt="avatar" />
+                    <img src="media/profile/profile_pic.jpeg" alt="avatar" />
                     <i class="fas fa-expand"></i>
                   </a>
                   <!-- available -->
