--- a/project1.html
+++ b/project1.html
@@ -58,10 +58,10 @@
                 <div class="art-avatar">
                   <a
                     data-fancybox="avatar"
-                    href="img/face-1.jpeg"
+                    href="media/profile/profile_pic.jpeg"
                     class="art-avatar-curtain"
                   >
-                    <img src="img/face-1.jpeg" alt="avatar" />
+                    <img src="media/profile/profile_pic.jpeg" alt="avatar" />
                     <i class="fas fa-expand"></i>
                   </a>
                   <!-- available -->
@@ -225,9 +225,9 @@
                       <!-- section title -->
                       <div class="art-section-title">
                         <!-- title frame -->
-                        <div class="art-title-frame">
+                        <div class="art-title-frame2">
                           <!-- title -->
-                          <h4>To Do App</h4>
+                          <h4>Mobile Fitness Application</h4>
                         </div>
                         <!-- title frame end -->
                       </div>
@@ -242,23 +242,23 @@
                           <div class="div1">
                             <img
                               class="animated-gif"
-                              src="img/works/thumbnail/todoGif.gif"
+                              src="media/turtlgainz1.gif"
                             />
-                            <p class="textcenter">Adding Tasks</p>
+                            <p class="textcenter">User Authentication</p>
                           </div>
                           <div class="div2">
                             <img
                               class="animated-gif"
-                              src="img/works/thumbnail/todoGif.gif"
+                              src="media/turtlgainz2.gif"
                             />
-                            <p class="textcenter">Deleting/Editing Tasks</p>
+                            <p class="textcenter">Exercise Database</p>
                           </div>
                           <div class="div3">
                             <img
                               class="animated-gif"
-                              src="img/works/thumbnail/todoGif.gif"
+                              src="media/turtlgainz3.gif"
                             />
-                            <p class="textcenter">Completing Tasks</p>
+                            <p class="textcenter">Workout Planner/Tools</p>
                           </div>
                         </div>
                         <!-- Form frame end -->
@@ -293,15 +293,16 @@
                       <p class="art-lg-text1 art-white">
                         Made with: 
                       </p>
+
                       
                       <div class="div1">
                         <img
                           class="animated-gif"
-                          src="img/p1.png"
+                          src="media/madewith/p1.png"
                         />
                       </div>
                     <!-- github button end -->
-                    &nbsp;
+
                   
                     <div class="new-art-buttons-frame2">
                       <a
